<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/_30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/_30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:gravity="center_vertical"
                android:text="@string/app_name1"
                android:textAppearance="@style/TextAppearance.MyApp.Headline5"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/mTxtShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/nav_share"
            android:drawablePadding="@dimen/_15dp"
            android:gravity="center_vertical"
            android:onClick="mOnNavigationClick"
            android:text="@string/share"
            android:textAppearance="@style/TextAppearance.MyApp.Body2"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/mTxtRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:drawableStart="@drawable/ic_rate"
            android:drawablePadding="@dimen/_15dp"
            android:gravity="center_vertical"
            android:onClick="mOnNavigationClick"
            android:text="@string/rate_us"
            android:textAppearance="@style/TextAppearance.MyApp.Body2"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/mTxtPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:drawableStart="@drawable/nav_privacy"
            android:drawablePadding="@dimen/_15dp"
            android:gravity="center_vertical"
            android:onClick="mOnNavigationClick"
            android:text="@string/privacy"
            android:textAppearance="@style/TextAppearance.MyApp.Body2"
            android:textColor="@color/black" />

    </LinearLayout>
</RelativeLayout>