<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:paddingStart="@dimen/_14dp"
        android:paddingEnd="@dimen/_14dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mMbtnBack"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:paddingStart="@dimen/_4dp"
                android:paddingEnd="@dimen/_4dp"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/clrBtn"
                app:backgroundTint="@color/colorOnBackground"
                app:cornerRadius="@dimen/_20dp"
                app:elevation="0dp"
                app:icon="@drawable/ic_back"
                app:iconGravity="textStart"
                app:iconTint="@android:color/transparent"
                app:iconTintMode="add"
                app:rippleColor="?colorControlHighlight"
                app:strokeWidth="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/saved_media"
                android:textAppearance="@style/TextAppearance.MyApp.Body2"
                android:textColor="@color/clrBtn" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rlsph"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/mTxtEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:text="@string/empty_txt"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MyApp.Headline6"
            android:textColor="@color/black" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_margin="5dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/native_ads"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70dp"
        android:orientation="vertical" />

</LinearLayout>